// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiColorPaletteDisplay is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 euiColorPaletteDisplay--sizeSmall"
  data-test-subj="test subject string"
>
  <span
    aria-hidden="true"
    class="euiColorPaletteDisplayFixed__bleedArea"
  >
    <span
      style="background-color:#1fb0b2;width:20%"
    />
    <span
      style="background-color:#ffdb6d;width:20%"
    />
    <span
      style="background-color:#ee9191;width:20%"
    />
    <span
      style="background-color:#ffffff;width:20%"
    />
    <span
      style="background-color:#888094;width:20%"
    />
  </span>
</span>
`;

exports[`EuiColorPaletteDisplay props HTML attributes accepts span attributes 1`] = `
<span
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 euiColorPaletteDisplay--sizeSmall"
  data-test-subj="test subject string"
  id="id"
>
  <span
    class="emotion-euiScreenReaderOnly"
  >
    title
  </span>
  <span
    aria-hidden="true"
    class="euiColorPaletteDisplayFixed__bleedArea"
  >
    <span
      style="background-color:#1fb0b2;width:20%"
    />
    <span
      style="background-color:#ffdb6d;width:20%"
    />
    <span
      style="background-color:#ee9191;width:20%"
    />
    <span
      style="background-color:#ffffff;width:20%"
    />
    <span
      style="background-color:#888094;width:20%"
    />
  </span>
</span>
`;

exports[`EuiColorPaletteDisplay props size m is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 euiColorPaletteDisplay--sizeMedium"
  data-test-subj="test subject string"
>
  <span
    aria-hidden="true"
    class="euiColorPaletteDisplayFixed__bleedArea"
  >
    <span
      style="background-color:#1fb0b2;width:20%"
    />
    <span
      style="background-color:#ffdb6d;width:20%"
    />
    <span
      style="background-color:#ee9191;width:20%"
    />
    <span
      style="background-color:#ffffff;width:20%"
    />
    <span
      style="background-color:#888094;width:20%"
    />
  </span>
</span>
`;

exports[`EuiColorPaletteDisplay props size s is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 euiColorPaletteDisplay--sizeSmall"
  data-test-subj="test subject string"
>
  <span
    aria-hidden="true"
    class="euiColorPaletteDisplayFixed__bleedArea"
  >
    <span
      style="background-color:#1fb0b2;width:20%"
    />
    <span
      style="background-color:#ffdb6d;width:20%"
    />
    <span
      style="background-color:#ee9191;width:20%"
    />
    <span
      style="background-color:#ffffff;width:20%"
    />
    <span
      style="background-color:#888094;width:20%"
    />
  </span>
</span>
`;

exports[`EuiColorPaletteDisplay props size xs is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 euiColorPaletteDisplay--sizeExtraSmall"
  data-test-subj="test subject string"
>
  <span
    aria-hidden="true"
    class="euiColorPaletteDisplayFixed__bleedArea"
  >
    <span
      style="background-color:#1fb0b2;width:20%"
    />
    <span
      style="background-color:#ffdb6d;width:20%"
    />
    <span
      style="background-color:#ee9191;width:20%"
    />
    <span
      style="background-color:#ffffff;width:20%"
    />
    <span
      style="background-color:#888094;width:20%"
    />
  </span>
</span>
`;

exports[`EuiColorPaletteDisplay props type and palette are rendered with type fixed and palette with stops 1`] = `
<span
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 euiColorPaletteDisplay--sizeSmall"
  data-test-subj="test subject string"
>
  <span
    aria-hidden="true"
    class="euiColorPaletteDisplayFixed__bleedArea"
  >
    <span
      style="background-color:#54B399;width:21%"
    />
    <span
      style="background-color:#D36086;width:32%"
    />
    <span
      style="background-color:#9170B8;width:21%"
    />
    <span
      style="background-color:#F5A700;width:26%"
    />
  </span>
</span>
`;

exports[`EuiColorPaletteDisplay props type and palette are rendered with type fixed and palette without stops 1`] = `
<span
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 euiColorPaletteDisplay--sizeSmall"
  data-test-subj="test subject string"
>
  <span
    aria-hidden="true"
    class="euiColorPaletteDisplayFixed__bleedArea"
  >
    <span
      style="background-color:#1fb0b2;width:20%"
    />
    <span
      style="background-color:#ffdb6d;width:20%"
    />
    <span
      style="background-color:#ee9191;width:20%"
    />
    <span
      style="background-color:#ffffff;width:20%"
    />
    <span
      style="background-color:#888094;width:20%"
    />
  </span>
</span>
`;

exports[`EuiColorPaletteDisplay props type and palette are rendered with type gradient and palette with stops 1`] = `
<span
  aria-hidden="true"
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 euiColorPaletteDisplay--sizeSmall"
  data-test-subj="test subject string"
  style="background:linear-gradient(to right, #54B399 0%, #D36086 53%, #9170B8 74%, #F5A700 100%)"
/>
`;

exports[`EuiColorPaletteDisplay props type and palette are rendered with type gradient and palette without stops 1`] = `
<span
  aria-hidden="true"
  aria-label="aria-label"
  class="euiColorPaletteDisplay testClass1 testClass2 euiColorPaletteDisplay--sizeSmall"
  data-test-subj="test subject string"
  style="background:linear-gradient(to right, #1fb0b2 0%, #ffdb6d 25%, #ee9191 50%, #ffffff 75%, #888094 100%)"
/>
`;
